--- a/.github/workflows/cmake-linux.yml
+++ b/.github/workflows/cmake-linux.yml
@@ -14,12 +14,12 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Setup CMake
-        uses: actions/setup-cmake@v3
+        uses: jwlawson/actions-setup-cmake@v2.0.2
         with:
           cmake-version: '3.31.x'
 
       - name: Setup LLVM (20)
-        uses: llvm/actions/setup-llvm@v1
+        uses: KyleMayes/install-llvm-action@v2
         with:
           version: '20'
 
@@ -42,4 +42,3 @@ jobs:
 
       - name: Test
         run: ctest --test-dir build/ci --output-on-failure -j 2
-
