--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -18,12 +18,12 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Setup CMake
-        uses: actions/setup-cmake@v3
+        uses: jwlawson/actions-setup-cmake@v2.0.2
         with:
           cmake-version: '3.31.x'
 
       - name: Setup LLVM (20)
-        uses: llvm/actions/setup-llvm@v1
+        uses: KyleMayes/install-llvm-action@v2
         with:
           version: '20'
 
@@ -54,11 +54,11 @@ jobs:
 
       - name: Setup vcpkg (Windows only)
         if: runner.os == 'Windows'
-        uses: microsoft/setup-vcpkg@v1
+        uses: lukka/run-vcpkg@v11.5
         with:
           vcpkgDirectory: '${{ runner.temp }}/vcpkg'
-          runVcpkgInstall: false
-          appendedCacheKey: windows-meson
+          vcpkgJsonGlob: 'vcpkg.json'
+          runVcpkgInstall: true
 
       - name: Build generator (non-Windows)
         if: runner.os != 'Windows'
@@ -73,7 +73,7 @@ jobs:
         shell: bash
         run: |
           cmake -G Ninja -S . -B build/codegen -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_TOOLCHAIN_FILE="${VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" \
+            -DCMAKE_TOOLCHAIN_FILE="${{ runner.temp }}/vcpkg/scripts/buildsystems/vcpkg.cmake" \
             -DVCPKG_FEATURE_FLAGS=manifests,versions \
             -DLLVM_DIR="$LLVM_PATH/lib/cmake/llvm" -DClang_DIR="$LLVM_PATH/lib/cmake/clang"
           cmake --build build/codegen --target gentest_codegen -j 2
@@ -88,4 +88,3 @@ jobs:
         run: |
           meson compile -C build/meson
           meson test -C build/meson
-
