--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -35,14 +35,13 @@ jobs:
           vcpkgJsonGlob: 'vcpkg.json'
           runVcpkgInstall: true
 
-      - name: Configure (Release, LLVM + vcpkg)
+      - name: Configure (Release, LLVM + fmt via vcpkg)
         shell: bash
         run: |
           cmake -G Ninja -S . -B build/ci \
             -DCMAKE_BUILD_TYPE=Release \
             -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
-            -DCMAKE_TOOLCHAIN_FILE="${{ runner.temp }}/vcpkg/scripts/buildsystems/vcpkg.cmake" \
-            -DVCPKG_FEATURE_FLAGS=manifests,versions \
+            -DCMAKE_PREFIX_PATH="${{ runner.temp }}/vcpkg/installed/x64-windows;$LLVM_PATH" \
             -DLLVM_DIR="$LLVM_PATH/lib/cmake/llvm" \
             -DClang_DIR="$LLVM_PATH/lib/cmake/clang"
 
