--- a/.github/workflows/cmake-macos.yml
+++ b/.github/workflows/cmake-macos.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   build-test:
     runs-on: macos-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        llvm: [18, 19, 20]
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -18,10 +22,14 @@ jobs:
         with:
           cmake-version: '3.31.x'
 
-      - name: Setup LLVM (20)
-        uses: KyleMayes/install-llvm-action@v2
-        with:
-          version: '20'
+      - name: Setup LLVM with Homebrew
+        shell: bash
+        run: |
+          brew update
+          brew install llvm@${{ matrix.llvm }}
+          LLVM_PREFIX=$(brew --prefix llvm@${{ matrix.llvm }})
+          echo "LLVM_PATH=${LLVM_PREFIX}" >> "$GITHUB_ENV"
+          echo "DYLD_LIBRARY_PATH=${LLVM_PREFIX}/lib:${DYLD_LIBRARY_PATH:-}" >> "$GITHUB_ENV"
 
       - name: Install deps (Homebrew)
         run: |
