--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   build-test:
     runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        llvm: [18, 19, 20]
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -18,10 +22,10 @@ jobs:
         with:
           cmake-version: '3.31.x'
 
-      - name: Setup LLVM (20)
+      - name: Setup LLVM (${{ matrix.llvm }})
         uses: KyleMayes/install-llvm-action@v2
         with:
-          version: '20'
+          version: ${{ matrix.llvm }}
 
       - name: Install Ninja (Chocolatey)
         shell: powershell
