feat(cmake): introduce LLVM/Clang discovery contract; gate codegen (RISK)
- Add cmake/GentestLLVM.cmake with dynamic monolithic discovery (clang-cpp + LLVM), LLVM 18+.
- Gate generator behind -DGENTEST_BUILD_CODEGEN; add PATH fallback in gentest_attach_codegen.
- Link fmt header-only; remove static fallback/link-group hacks for codegen.
- Update tests to use header-only fmt and tolerate external generator; skip generator-only tests when unavailable.
- Update README with discovery instructions and 18+ support note.

Backtrack marker: if CI regresses, revert this commit to restore previous behavior.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,10 @@ set(CMAKE_EXPERIMENTAL_CXX_MODULE_DYNDEP 0)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-add_subdirectory(tools)
+option(GENTEST_BUILD_CODEGEN "Build gentest code generator (requires LLVM/Clang)" ON)
+if(GENTEST_BUILD_CODEGEN)
+    add_subdirectory(tools)
+endif()
 include(GentestCodegen)
 add_subdirectory(src)
 
