CI: install Boost.JSON for Allure writer; adjust deps across OS
- Linux: add libboost-json-dev to apt installs
- macOS: brew install boost
- Windows: add boost-json to vcpkg manifest
- Keep LLVM_DIR/Clang_DIR from setup-llvm action

--- a/.github/workflows/cmake-macos.yml
+++ b/.github/workflows/cmake-macos.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install deps (Homebrew)
         run: |
           brew update
-          brew install ninja fmt
+          brew install ninja fmt boost
 
       - name: Configure (Debug)
         shell: bash
