--- a/.github/workflows/cmake-linux.yml
+++ b/.github/workflows/cmake-linux.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install deps (Linux)
         run: |
           sudo apt-get update
-          sudo apt-get install -y ninja-build libfmt-dev
+          sudo apt-get install -y ninja-build libfmt-dev libboost-json-dev
 
       - name: Configure (Debug)
         shell: bash
