ci/cmake: allow LLVM component fallback (GENTEST_LLVM_DYNAMIC_ONLY=OFF); fix fmt on Windows; enable Boost.JSON earlier
- GentestLLVM: keep dynamic-only strictness behind flag; don’t hard-fail when OFF; improve summary
- tools: link clang-cpp+LLVM when present; otherwise fall back to granular Clang + LLVM Support; use RESCAN on Linux
- CMakeLists: define GENTEST_USE_BOOST_JSON before resolving deps and building src
- Linux/macOS workflows: install Boost.JSON; pass -DGENTEST_LLVM_DYNAMIC_ONLY=OFF
- Windows workflow: pass fmt_DIR from vcpkg; pass -DGENTEST_LLVM_DYNAMIC_ONLY=OFF
- Unified CMake workflow: align deps and pass the flag

--- a/.github/workflows/cmake-linux.yml
+++ b/.github/workflows/cmake-linux.yml
@@ -51,6 +51,7 @@ jobs:
           cmake -G Ninja -S . -B build/ci \
             -DCMAKE_BUILD_TYPE=Debug \
             -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
+            -DGENTEST_LLVM_DYNAMIC_ONLY=OFF \
             -DLLVM_DIR="$LLVM_PATH/lib/cmake/llvm" \
             -DClang_DIR="$LLVM_PATH/lib/cmake/clang"
 
