--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(fmt CONFIG REQUIRED)
   # vcpkg toolchains. Our tool does not depend on LibEdit.
   set(CMAKE_DISABLE_FIND_PACKAGE_LibEdit ON)
 
-  # Centralized LLVM/Clang discovery (dynamic monoliths only)
+  # Centralized LLVM/Clang discovery (supports monolithic and component fallback)
   include(GentestLLVM)
   gentest_find_llvm_clang()
 
@@ -24,21 +24,16 @@ find_package(fmt CONFIG REQUIRED)
   target_compile_features(gentest_codegen PRIVATE cxx_std_23)
 
 if(DEFINED LLVM_INCLUDE_DIRS)
-    # Ensure correct LLVM headers take precedence over any stray /usr/local/include
-    target_include_directories(gentest_codegen BEFORE PRIVATE ${LLVM_INCLUDE_DIRS})
+    target_include_directories(gentest_codegen PRIVATE ${LLVM_INCLUDE_DIRS})
 endif()
 
 if(TARGET clangTooling)
     get_target_property(_gentest_clang_includes clangTooling INTERFACE_INCLUDE_DIRECTORIES)
     if(_gentest_clang_includes)
-        target_include_directories(gentest_codegen BEFORE PRIVATE ${_gentest_clang_includes})
+        target_include_directories(gentest_codegen PRIVATE ${_gentest_clang_includes})
     endif()
 endif()
 
-# If exported by discovery, add canonical Clang include roots explicitly
-if(DEFINED GENTEST_CLANG_INCLUDE_DIRS AND GENTEST_CLANG_INCLUDE_DIRS)
-    target_include_directories(gentest_codegen BEFORE PRIVATE ${GENTEST_CLANG_INCLUDE_DIRS})
-endif()
 
   if(LLVM_ENABLE_RTTI)
       target_compile_definitions(gentest_codegen PRIVATE LLVM_ENABLE_RTTI)
@@ -47,8 +42,48 @@ endif()
   # Prefer header-only fmt to avoid system-shared libfmt dependencies
   target_link_libraries(gentest_codegen PRIVATE fmt::fmt-header-only)
 
-  # Link strictly against dynamic monoliths
-  target_link_libraries(gentest_codegen PRIVATE clang-cpp LLVM)
+  # Link against LLVM/Clang
+  # - If dynamic monoliths are available and required, use clang-cpp + LLVM.
+  # - If GENTEST_LLVM_DYNAMIC_ONLY is OFF, fall back to granular component linking when needed.
+  set(_gentest_link_libs)
+  if(GENTEST_LLVM_DYNAMIC_ONLY)
+    if(TARGET clang-cpp AND TARGET LLVM)
+      set(_gentest_link_libs clang-cpp;LLVM)
+    else()
+      message(FATAL_ERROR "GENTEST_LLVM_DYNAMIC_ONLY=ON but required monolithic targets are missing (clang-cpp and/or LLVM)")
+    endif()
+  else()
+    if(TARGET clang-cpp AND TARGET LLVM)
+      set(_gentest_link_libs clang-cpp;LLVM)
+    else()
+      # Fallback to granular component libraries
+      set(_gentest_clang_libs
+          clangTooling
+          clangAST
+          clangASTMatchers
+          clangBasic
+          clangFrontend
+          clangLex
+          clangParse
+          clangSema)
+      if(COMMAND llvm_map_components_to_libnames)
+        llvm_map_components_to_libnames(_gentest_llvm_libs Support)
+      else()
+        # If the helper is not available, try the monolithic LLVM target
+        if(TARGET LLVM)
+          set(_gentest_llvm_libs LLVM)
+        endif()
+      endif()
+      set(_gentest_link_libs ${_gentest_clang_libs};${_gentest_llvm_libs})
+    endif()
+  endif()
+
+  if(UNIX AND NOT APPLE)
+    # On Linux with static archives in imported targets, a rescan group helps resolve cycles
+    target_link_libraries(gentest_codegen PRIVATE $<LINK_GROUP:RESCAN,${_gentest_link_libs}>)
+  else()
+    target_link_libraries(gentest_codegen PRIVATE ${_gentest_link_libs})
+  endif()
 
   # Provide generator with project version for --help output in generated code
   target_compile_definitions(gentest_codegen PRIVATE GENTEST_VERSION_STR="${PROJECT_VERSION}")
@@ -60,3 +95,6 @@ endif()
   endif()
 
   unset(_gentest_clang_includes)
+  unset(_gentest_clang_libs)
+  unset(_gentest_llvm_libs)
+  unset(_gentest_link_libs)
